* 27/01/14 - v.2.0.3
   - fixed an issue in the ofarm skeleton
   - ParallelForReduce optimized for the case when it is called multiple times 
     in a sequential loop
   - fixed possible node termination problem (in case the freezing flag was set)
   - commented out the optimization heuristic in the parallel_for pattern 
     since it does not work well with high unbalanced loop iterations
   - parallel_for/reduce: fixed some issues and optimized the case when it is 
     used with just 1 thread
   - ff_send_out_to modified in order to better work with ondemand scheduling
     policy
   - changed some int types with size_t, moved to svector whenever possible
   - more possible combinations of farm, pipeline and feedback using 
     ff_minode and ff_monode
   - better multi-input and multi-output support (ff_minode ff_monode)
   - ff_buffernode introduced 
   - more low-level examples showing how to build "complex" graph of nodes
   - better estimation of the bounded and unbounded SPSC queue length. 
     Thanks to M. Moniruzzaman (moniruzzaman@hlrs.de) for the patch.
   - fixed some problems with the current version in the SWPS3 example 
     (thanks to Maurizio Drocco)
   - introduced the ff_mdf/stencil2D/ff_graphsearch patterns (experimental)
   - fixed a bug in the pipeline when used as an accelerator
* 08/09/13 - v.2.0.2
   - added the possibility to freeze and thaw one single worker thread
     in a task-farm skeleton (see tests/test_stopstartthreads2.cpp)
   - added end_callback in case an external tool wants to be notified 
     of the skeleton tree termination
   - introduced FF_ESAVER (Energy SAVER) compiler flag (experimental) (thanks to Mehdi Goli )
   - ff_relax now uses nanosleep instead of usleep
   - first full porting to ARM processor (thanks to Mauro Mulatero)	
   - added new interfaces for the ff_farm
   - added a new construct ff_pipe only for C++11
   - fixed some problems with cmake